--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <string name="app_name">CoolMenu</string>
+    <string name="test_button_string">This is a button</string>
 
 </resources>
