Added image to splash activity
png image put into drawable folder, added via code to splash.xml file, and a description of file implmented as a string put in strings.xml file

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">CoolMenu</string>
     <string name="test_button_string">Press to not feed beaver</string>
     <string name="beaver_desc">This is a beaver</string>
+    <string name="splash_desc">This is a face</string>
 
 </resources>
